--- a/header.css
+++ b/header.css
@@ -57,7 +57,46 @@
     top:100%;
 }
 
+/* código omitido */
 
+.lista-menu_titulo, 
+.lista-menu_item {
+    padding: 1em;
+    background-color: var(--branco);
+}
+/* código omitido */
+
+.lista-menu__titulo {
+    color: var(--laranja);
+}
+/* código omitido */
+
+.lista-menu__link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+}
+/* código omitido */
+
+.lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+}
+
+/* código omitido */
+.lista-menu__titulo,
+.lista-menu__item {
+  padding: 1em;
+  background-color: var(--branco);
+}
+.lista-menu__titulo {
+    color: var(--laranja);
+  }
+  
 
 
 
