--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --cor-de-fundo: #ebecee;
-    --branco: #ffffff;
+    --cor-de-fundo: #ebeeed;
+    --branco: #270101;
     --laranja: #eb9b00;
   }
