--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+@import url("styles/header.css");
+
 :root {
-  --cor-de-fundo: #ebecee;
-  --branco: #ffffff;
-  --laranja: #eb9b00;
+    --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
+}
+
+body {
+    background-color: var(--cor-de-fundo);
 }
