--- a/styles/header.css
+++ b/styles/header.css
@@ -7,12 +7,13 @@
     background-position: center;
 }
 
-.cabeçalho {
+.cabecalho {
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+    position: relative;
+  }
 
 .container {
     display: flex;
@@ -21,4 +22,35 @@
 
 .container__imagem {
     padding: 1em;
+}
+
+.lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+}
+
+
+.container__botao:checked ~ .lista-menu {
+    display: block;
+}
+
+.lista-menu_titulo, 
+.lista-menu_item {
+    padding: 1em;
+    background-color: var(--branco);
+
+}
+
+.lista-menu__titulo {
+    color: var(--laranja);
+}
+
+.lista-menu__link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
 }
