--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,16 @@
 body {
     background-color: var(--cor-de-fundo);
 }
+
+:root {
+  
+      --laranja: #EB9B00;
+  }
+  
+  :root {
+
+    
+    
+        --laranja: #EB9B00;
+        --azul-degrade:linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    }
