--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,13 @@
 @import url("styles/header.css");
 
 :root {
-    --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
-}
-
+    --cor-de-fundo: #ebecee;
+    --branco: #ffffff;
+    --laranja: #eb9b00;
+    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+  }
+  
 body {
     background-color: var(--cor-de-fundo);
 }
 
-:root {
-  
-      --laranja: #EB9B00;
-  }
-  
-  :root {
-
-    
-    
-        --laranja: #EB9B00;
-        --azul-degrade:linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-    }
