--- a/styles/header.css
+++ b/styles/header.css
@@ -21,7 +21,7 @@
 }
 
 .container__imagem {
-    padding: 1em;
+    <!--padding: 1em;-->
 }
 
 .lista-menu {
@@ -53,4 +53,12 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
-}
+  }
+  
+  .lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+  }
+  
