--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 :root {
     --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
 }
 
 body {
     background-color: var(--cor-de-fundo);
+}
+
+h1 {
+    background-color: white;
 }
