--- a/styles/header.css
+++ b/styles/header.css
@@ -7,13 +7,14 @@
     background-position: center;
 }
 
-.cabeçalho {
+.cabecalho {
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
+    position: relative;
+  }
+  
 .container {
     display: flex;
     align-items: center;
@@ -22,3 +23,15 @@
 .container__imagem {
     padding: 1em;
 }
+
+.lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+  }
+  
+
+  .container__botao:checked ~ .lista-menu {
+    display: block;
+  }
+    
